# pydantic.run

./: .gitignore  .pre-commit-config.yaml  .prettierignore  LICENSE  README.md  code.py  create_sandbox_demo.html  eslint.config.mjs  index.html  package-lock.json  package.json  pyproject.toml  run_in_sandbox.py  tsconfig.json  vite.config.mjs  wrangler.toml
.github/workflows/: ci.yml
functions/: tsconfig.json
functions/api/store/: [project].ts
logfire.run/: package.json
src/: app.tsx  editor.tsx  index.html  main.js  main.py  main.ts  messageTypes.ts  monacoEditor.ts  run.py  store.ts  style.css  style.scss  tabs.tsx  types.d.ts  worker.js  worker.ts
src/backend/: package.json  tsconfig.json  worker-configuration.d.ts  wrangler.toml
src/backend/src/: index.ts  new.ts
src/cf_worker/: package.json  worker-configuration.d.ts
src/cf_worker/src/: api.ts  index.ts
src/frontend/: index.html  package.json  tsconfig.json  vite.config.mjs
src/frontend/public/favicon/: browserconfig.xml  site.webmanifest
src/frontend/src/: app.tsx  default_code.py  editor.tsx  install_dependencies.py  main.ts  monacoEditor.ts  prepare_env.py  run.py  store.ts  style.scss  tabs.tsx  types.d.ts  worker.ts
src/frontend/src/examples/: index.tsx  logfire_example.py  pydantic_example.py
src/sandbox/: Makefile  package.json  pyproject.toml  requirements.txt  wrangler.toml
src/sandbox/src/: entry.py  run_code.py
src/sandbox/stubs/: asgi.pyi
src/worker/: package.json  tsconfig.json  worker-configuration.d.ts
src/worker/src/: api.ts  index.ts  new.ts
